--- a/src/app/core/components/header/header/header.component.html
+++ b/src/app/core/components/header/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<nav class="navbar navbar-light  red-bg">
+  <span class="navbar-brand mb-0 h1" style="color:white;">Bookmark It</span>
+</nav>
