setup jumbotron greeting, with create topic and create bookmark buttons

--- a/src/app/core/routes/home/home/home.component.html
+++ b/src/app/core/routes/home/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+
+<div class="jumbotron">
+  <h1 class="display-4">Welcome,</h1>
+  <p class="lead">Join us, to bookmark any programming tutorial, video, article, etc, and have it in a nicely organized for you to reference later. </p>
+  <hr class="my-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <button class="btn btn-primary">Create new Topic</button>
+      </div>
+      <div class="col-sm">
+        <button class="btn btn-danger">Create new Bookmark</button>
+      </div>
+    </div>
+  </div>
+</div>
