included httpclientmodule, added getBookmarks service to bookmarks.service.ts; and using getBookmarks service in app.module.ts

--- a/src/app/core/components/bookmark/bookmark/bookmark.component.html
+++ b/src/app/core/components/bookmark/bookmark/bookmark.component.html
@@ -1,1 +1,4 @@
-<p>bookmark works!</p>
+<div class="row">
+  <div class="col"><h3 style="text-decoration: underline;">Bookmarks</h3></div>
+</div>
+
