--- a/src/app/core/components/header/header/header.component.html
+++ b/src/app/core/components/header/header/header.component.html
@@ -1,3 +1,10 @@
-<nav class="navbar navbar-light  red-bg">
-  <span class="navbar-brand mb-0 h1" style="color:white;">Bookmark It</span>
-</nav>
+ <!-- Header -->
+ <div class="row">
+  <div class="col">
+    <nav class="navbar navbar-light red-bg">
+      <span class="navbar-brand mb-0 h1" style="color:white;">Bookmark It</span>
+    </nav>
+ </div>
+</div>
+
+
