--- a/src/app/core/routes/home/home/home.component.html
+++ b/src/app/core/routes/home/home/home.component.html
@@ -1,4 +1,4 @@
-
+<!-- Jumbotron -->
 <div class="jumbotron">
   <h1 class="display-4">Welcome,</h1>
   <p class="lead">Join us, to bookmark any programming tutorial, video, article, etc, and have it in a nicely organized for you to reference later. </p>
@@ -14,3 +14,8 @@
     </div>
   </div>
 </div>
+
+
+
+<!-- bookmark -->
+<app-bookmark></app-bookmark>
