now using bootstrap styles; now populating app with bookmarks from api; changed app color scheme

--- a/src/app/core/components/bookmark/bookmark/bookmark.component.html
+++ b/src/app/core/components/bookmark/bookmark/bookmark.component.html
@@ -1,4 +1,15 @@
-<div class="row">
-  <div class="col"><h3 style="text-decoration: underline;">Bookmarks</h3></div>
+<div class="row" style="padding: 40px;">
+  <div class="col"><h3 style="text-decoration: underline; margin-bottom: 30px;">Bookmarks</h3></div>
+  <div class="row">
+      <div class="col-sm-6" style="margin-bottom: 20px; margin-left: 15x;" *ngFor="let bookmark of bookmarks">
+        <div class="card">
+          <h5 class="card-header">{{bookmark.title}}</h5>
+          <div class="card-body">
+            <h5 class="card-title">{{bookmark.subject}}</h5>
+            <p class="card-text">{{bookmark.description}}</p>
+            <a href="#" class="btn light-purple-bg white-color">Go somewhere</a>
+          </div>
+        </div>
+      </div>
 </div>
-
+</div>
