--- a/src/app/core/routes/home/home/home.component.html
+++ b/src/app/core/routes/home/home/home.component.html
@@ -6,10 +6,10 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <button class="btn btn-primary">Create new Topic</button>
+        <button class="btn light-purple-bg white-color">Create new Topic</button>
       </div>
       <div class="col-sm">
-        <button class="btn btn-danger">Create new Bookmark</button>
+        <button class="btn sea-green-bg white-color">Create new Bookmark</button>
       </div>
     </div>
   </div>
@@ -18,4 +18,4 @@
 
 
 <!-- bookmark -->
-<app-bookmark></app-bookmark>
+<app-bookmark [bookmarks]="bookmarks"></app-bookmark>
