--- a/src/styles.css
+++ b/src/styles.css
@@ -37,4 +37,10 @@ body {
   background-color: #6F44C6;
 }
 
+.blue-bg {
+  background-color: #629FF2 !important;
+}
 
+.black-bg {
+  background-color: #050215 !important;
+}
