refactored home page to show topics instead of bookmarks; create a bookmark route; created a topicComponent

--- a/src/app/core/routes/home/home/home.component.html
+++ b/src/app/core/routes/home/home/home.component.html
@@ -76,5 +76,7 @@
 </div>
 
 
-<!-- bookmark -->
-<app-bookmark [bookmarks]="bookmarks"></app-bookmark>
+<!-- Topics -->
+<app-topic [topics]="topics"></app-topic>
+
+
