--- a/src/app/core/components/topic/topic/topic.component.html
+++ b/src/app/core/components/topic/topic/topic.component.html
@@ -7,27 +7,13 @@
           <div class="card-body">
             <h5 class="card-title">{{topic.title}}</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go to {{topic.title}} Bookmarks</a>
+            <a [routerLink]="['/bookmarks', topic.title]" href="#" class="btn btn-primary">Go to {{topic.title}} Bookmarks</a>
           </div>
           <div class="card-footer">
             <small class="text-muted">Created on {{topic.createdAt | date}}</small>
           </div>
         </div>
-        <!-- <div class="card">
-          <h5 class="card-header"></h5>
-          <div class="card-body">
-            <h5 class="card-title">{{bookmark.subject}}</h5>
-            <p class="card-text">{{bookmark.description}}</p>
-            <a href="{{bookmark.link_url}}" class="btn blue-bg white-color">Click to Visit Link</a>
-          </div>
-        </div> -->
       </div>
 </div>
 </div>
 
-<!--
-createdAt: "2020-03-20T13:52:39.871Z"
-id: 2
-photo_url: "https://f0.pngfuel.com/png/559/367/postgresql-object-relational-database-oracle-database-freebsd-icon-png-clip-art.png"
-title: "Postgres"
-updatedAt: "2020-03-20T13:52:39.871Z" -->
