added activedroute and bookmarkService in bookmarksComponent; now using getBookmarksByTopic in bookmarksComponent to get bookmarks

--- a/src/app/core/routes/bookmarks/bookmarks/bookmarks.component.html
+++ b/src/app/core/routes/bookmarks/bookmarks/bookmarks.component.html
@@ -1,2 +1,1 @@
-<p>bookmarks works!</p>
-<!-- <app-bookmark [bookmarks]="bookmarks"></app-bookmark> -->
+<app-bookmark [bookmarks]="bookmarks"></app-bookmark>
