users can now click link and be redirected back to home page

--- a/src/app/core/components/bookmark/bookmark/bookmark.component.html
+++ b/src/app/core/components/bookmark/bookmark/bookmark.component.html
@@ -1,7 +1,7 @@
-<div class="row" style="padding: 40px;">
-  <div class="col"><h3 style="text-decoration: underline; margin-bottom: 30px;">Bookmarks</h3></div>
+<h3 style="text-decoration: underline; margin-bottom: 30px; margin-top: 30px;">Bookmarks</h3>
+<div class="row" style="padding: 30px;">
   <div class="row">
-      <div class="col-sm-6" style="margin-bottom: 20px; margin-left: 15x;" *ngFor="let bookmark of bookmarks">
+      <div class="col-sm-7" style="margin-bottom: 20px; margin-left: 10x;" *ngFor="let bookmark of bookmarks">
         <div class="card">
           <h5 class="card-header"></h5>
           <div class="card-body">
