--- a/src/app/core/components/header/header/header.component.html
+++ b/src/app/core/components/header/header/header.component.html
@@ -2,7 +2,7 @@
  <div class="row">
   <div class="col">
     <nav class="navbar navbar-light purple-bg">
-      <span class="navbar-brand mb-0 h1" style="color:white;">Bookmark It</span>
+      <span class="navbar-brand mb-0 h1" style="color:white;" [routerLink]="['/home']">Bookmark It</span>
     </nav>
  </div>
 </div>
