--- a/src/app/core/components/topic/topic/topic.component.html
+++ b/src/app/core/components/topic/topic/topic.component.html
@@ -1,7 +1,7 @@
 <div class="row" style="padding: 40px;">
   <div class="col"><h3 style="text-decoration: underline; margin-bottom: 30px;">Topics</h3></div>
   <div class="row">
-      <div class="col-sm-3" style="margin-bottom: 20px; margin-left: 15x; max-height: 500px;" *ngFor="let topic of topics">
+      <div class="col-sm-3" style="margin-top:45px; margin-left: 15x; max-height: 500px;" *ngFor="let topic of topics">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" style="height: 200px;" src="{{topic.photo_url}}" alt="Card image cap">
           <div class="card-body">
