refactored code for reusablity, and readability in home.component.ts; constructed error or success message in addNewTopic and addNewBookmark functions in home.component.ts; form now clears when user enters data

--- a/src/app/core/routes/home/home/home.component.html
+++ b/src/app/core/routes/home/home/home.component.html
@@ -29,6 +29,16 @@
       <div class="modal-body">
         <form [formGroup]="createTopic" (ngSubmit)="addNewTopic()">
           <div class="form-group">
+            <div id="topic-message-container" *ngIf="showTopicMessage.show">
+              <div [ngSwitch]="showTopicMessage.message">
+                <div class="alert alert-success" role="alert" *ngSwitchCase="true">
+                  Topic Successfully created!!!
+                </div>
+                <div class="alert alert-danger" role="alert" *ngSwitchCase="false">
+                  Topic couldnt be created, try again!!!
+                </div>
+              </div>
+            </div>
             <label for="title">Title</label>
             <input type="text" class="form-control" formControlName="title" placeholder="Title">
           </div>
@@ -53,6 +63,16 @@
       <div class="modal-body">
         <form [formGroup]="createBookmark" (ngSubmit)="addNewBookmark()">
           <div class="form-group">
+            <div id="bookmark-message-container" *ngIf="showBookmarkMessage.show">
+              <div [ngSwitch]="showBookmarkMessage.message">
+                <div class="alert alert-success" role="alert" *ngSwitchCase="true">
+                  Bookmark Successfully created!!!
+                </div>
+                <div class="alert alert-danger" role="alert" *ngSwitchCase="false">
+                  Bookmark couldnt be created, try again!!!
+                </div>
+              </div>
+            </div>
             <label for="topic_title">Title</label>
             <input type="text" class="form-control" formControlName="title" placeholder="Title">
           </div>
