now using ngx-spinner as a temporary solution for a loading spinner

--- a/src/app/core/routes/home/home/home.component.html
+++ b/src/app/core/routes/home/home/home.component.html
@@ -97,6 +97,13 @@
 
 
 <!-- Topics -->
-<app-topic [topics]="topics"></app-topic>
+<div *ngIf="showTopics; else showLoadingSpinner">
+  <app-topic [topics]="topics"></app-topic>
+</div>
+
+<ng-template #showLoadingSpinner>
+  <ngx-spinner></ngx-spinner>
+</ng-template>
+
 
 
